--- a/lab1/index.html
+++ b/lab1/index.html
@@ -56,14 +56,14 @@ int main() {
 
     <h1 style="color:#FB7185;">Завдання 1–8 до лабораторної роботи №1:</h1>
 
-    <li>Завдання 1</li>
-    <li>Завдання 2</li>
-    <li>Завдання 3</li>
-    <li>Завдання 4</li>
-    <li>Завдання 5</li>
-    <li>Завдання 6</li>
-    <li>Завдання 7</li>
-    <li>Завдання 8</li>
+    <li><a href="KychenkoLab01-1.html">Завдання 1</a></li>
+<li><a href="KychenkoLab01-2.html">Завдання 2</a></li>
+<li><a href="KychenkoLab01-3.html">Завдання 3</a></li>
+<li><a href="KychenkoLab01-4.html">Завдання 4</a></li>
+<li><a href="KychenkoLab01-5.html">Завдання 5</a></li>
+<li><a href="KychenkoLab01-6.html">Завдання 6</a></li>
+<li><a href="KychenkoLab01-7.html">Завдання 7</a></li>
+<li><a href="KychenkoLab01-8.html">Завдання 8</a></li>
 
 </body>
 </html>
