--- a/lab4/lab4/KychenkoLab04-1.html
+++ b/lab4/lab4/KychenkoLab04-1.html
@@ -1,23 +1,24 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Рядок, що біжить – Завдання 1</title>
+    <title>Рядок, що біжить – Киченко Віталій</title>
+    <meta name="description" content="Лабораторна робота №4. Завдання 1. Рядок, що біжить.">
+    <meta name="keywords" content="marquee, рядок що біжить, лабораторна 4, Киченко Віталій">
 </head>
 
-<body bgcolor="#0F172A" text="#E5E7EB">
+<body bgcolor="#FFF7CC" text="#1E293B">
 
     <p align="center">
         <br><br><br>
 
-        <marquee width="800" bgcolor="#22C55E" height="60" behavior="alternate">
-            <font color="#020617" face="Verdana" size="5">
-                <b><i>
-                    ПРИКЛАД РЯДКА, ЩО БІЖИТЬ (КОЛИВАННЯ)
-                </i></b>
+        <marquee width="800" height="50" bgcolor="#FFB74D" behavior="alternate">
+            <font color="#1E293B" face="Verdana" size="5">
+                <b><i>ПРИКЛАД РЯДКА, ЩО БІЖИТЬ (КОЛИВАННЯ)</i></b>
             </font>
         </marquee>
 
+        <br><br>
     </p>
 
     <p align="right">
