--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <ul>
         <li><a href="lab1/">Лабораторна №1</a></li>
         <li><a href="lab3/">Лабораторна №3</a></li>
+        <li><a href="lab4/">Лабораторна №4</a></li>
+
     </ul>
 
 </body>
