--- a/lab4/index.html
+++ b/lab4/index.html
@@ -22,11 +22,12 @@
 
     <h1 style="color:#FACC15;">Завдання 1–3 до лабораторної №4:</h1>
 
-    <ul>
-        <li><a href="KychenkoLab04-1.html" style="color:#38BDF8;">Завдання 1</a></li>
-        <li><a href="KychenkoLab04-2.html" style="color:#38BDF8;">Завдання 2</a></li>
-        <li><a href="KychenkoLab04-3.html" style="color:#38BDF8;">Завдання 3</a></li>
-    </ul>
+   <ul>
+    <li><a href="KychenkoLab04-1.html">Завдання 1</a></li>
+    <li><a href="KychenkoLab04-2.html">Завдання 2</a></li>
+    <li><a href="KychenkoLab04-3.html">Завдання 3</a></li>
+</ul>
+
 
 </body>
 </html>
