--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <li><a href="lab1/">Лабораторна №1</a></li>
         <li><a href="lab3/">Лабораторна №3</a></li>
         <li><a href="lab4/">Лабораторна №4</a></li>
+        <li><a href="lab5/">Лабораторна №5</a></li>
+
 
     </ul>
 
