--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <li><a href="lab3/">Лабораторна №3</a></li>
         <li><a href="lab4/">Лабораторна №4</a></li>
         <li><a href="lab5/">Лабораторна №5</a></li>
+        <li><a href="lab6/">Лабораторна №6</a></li>
 
 
     </ul>
