--- a/lab6/KychenkoLab06-5.html
+++ b/lab6/KychenkoLab06-5.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <title>Сенсорне зображення</title>
 </head>
+
 <body bgcolor="#FFFFCC">
 
 <map name="map5">
-    <area shape="circle" coords="100,100,40" href="#" title="Це круг">
-    <area shape="rect" coords="160,60,260,140" href="#" title="Це прямокутник">
+    <area shape="circle" coords="100,100,40"
+          href="KychenkoLab06-1.html"
+          title="Це круг">
+
+    <area shape="rect" coords="160,60,260,140"
+          href="KychenkoLab06-3.html"
+          title="Це прямокутник">
 </map>
 
-<img src="image/nav_map.png" width="300" border="2" usemap="#map5">
+<img src="image/nav_map.png" usemap="#map5" width="300">
 
 <p align="right"><i>Киченко Віталій, 304-ТН</i></p>
 
