--- a/lab6/KychenkoLab06-5.html
+++ b/lab6/KychenkoLab06-5.html
@@ -7,17 +7,21 @@
 
 <body bgcolor="#FFFFCC">
 
+<h2>Активні області</h2>
+
 <map name="map5">
-    <area shape="circle" coords="100,100,40"
+    <!-- КОЛО -->
+    <area shape="circle" coords="80,80,40"
           href="KychenkoLab06-1.html"
           title="Це круг">
 
-    <area shape="rect" coords="160,60,260,140"
+    <!-- ПРЯМОКУТНИК -->
+    <area shape="rect" coords="170,30,290,140"
           href="KychenkoLab06-3.html"
           title="Це прямокутник">
 </map>
 
-<img src="image/nav_map.png" usemap="#map5" width="300">
+<img src="image/nav_map.png" usemap="#map5" width="300" border="2">
 
 <p align="right"><i>Киченко Віталій, 304-ТН</i></p>
 
