--- a/lab6/KychenkoLab06-5.html
+++ b/lab6/KychenkoLab06-5.html
@@ -10,15 +10,19 @@
 <h2>Активні області</h2>
 
 <map name="map5">
-    <!-- КОЛО -->
-    <area shape="circle" coords="80,80,40"
-          href="KychenkoLab06-1.html"
-          title="Це круг">
 
-    <!-- ПРЯМОКУТНИК -->
-    <area shape="rect" coords="170,30,290,140"
+    <!-- КОЛО (ЛІВА ЧАСТИНА) -->
+    <area shape="rect"
+          coords="0,0,150,300"
+          href="KychenkoLab06-1.html"
+          title="Перейти на завдання 1">
+
+    <!-- ПРЯМОКУТНИК (ПРАВА ЧАСТИНА) -->
+    <area shape="rect"
+          coords="151,0,300,300"
           href="KychenkoLab06-3.html"
-          title="Це прямокутник">
+          title="Перейти на завдання 3">
+
 </map>
 
 <img src="image/nav_map.png" usemap="#map5" width="300" border="2">
