--- a/lab6/KychenkoLab06-5.html
+++ b/lab6/KychenkoLab06-5.html
@@ -2,32 +2,19 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Сенсорне зображення</title>
+    <title>Тест кліків</title>
 </head>
+<body>
 
-<body bgcolor="#FFFFCC">
-
-<h2>Активні області</h2>
+<h2>Перевірка кліків</h2>
 
 <map name="map5">
-
-    <!-- КОЛО (ЛІВА ЧАСТИНА) -->
-    <area shape="rect"
-          coords="0,0,150,300"
-          href="KychenkoLab06-1.html"
-          title="Перейти на завдання 1">
-
-    <!-- ПРЯМОКУТНИК (ПРАВА ЧАСТИНА) -->
-    <area shape="rect"
-          coords="151,0,300,300"
-          href="KychenkoLab06-3.html"
-          title="Перейти на завдання 3">
-
+    <area shape="rect" coords="0,0,150,300" href="KychenkoLab06-1.html">
+    <area shape="rect" coords="151,0,300,300" href="KychenkoLab06-3.html">
 </map>
 
-<img src="image/nav_map.png" usemap="#map5" width="300" border="2">
-
-<p align="right"><i>Киченко Віталій, 304-ТН</i></p>
+<img src="image/nav_map.png" usemap="#map5" width="300">
 
 </body>
 </html>
+
