--- a/lab6/KychenkoLab06-5.html
+++ b/lab6/KychenkoLab06-5.html
@@ -9,12 +9,22 @@
 <h2>Перевірка кліків</h2>
 
 <map name="map5">
-    <area shape="rect" coords="0,0,150,300" href="KychenkoLab06-1.html">
-    <area shape="rect" coords="151,0,300,300" href="KychenkoLab06-3.html">
+
+    <!-- ЛІВА ЧАСТИНА -->
+    <area shape="rect"
+          coords="0,0,149,299"
+          href="KychenkoLab06-1.html"
+          title="Перейти на завдання 1">
+
+    <!-- ПРАВА ЧАСТИНА -->
+    <area shape="rect"
+          coords="150,0,300,299"
+          href="KychenkoLab06-3.html"
+          title="Перейти на завдання 3">
+
 </map>
 
 <img src="image/nav_map.png" usemap="#map5" width="300">
 
 </body>
 </html>
-
