--- a/lab8/index.html
+++ b/lab8/index.html
@@ -1,1 +1,23 @@
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Лабораторна робота №8 – Киченко Віталій</title>
+</head>
+
+<body bgcolor="#ffffff" text="#330066">
+
+<p align="center">
+    <font color="#008080" size="7"><b>Лабораторна робота №8</b></font><br><br>
+</p>
+
+<p align="right"><i><u>Студент групи 304-ТН Киченко Віталій</u></i></p>
+
+<hr>
+
+<h1>Завдання 1–3 до лабораторної роботи №8:</h1>
+
+<ul>
+    <li><a href="KychenkoLab08-1.html">Завдання 1</a></li>
+    <li><a href="Kychenko
 
