--- a/lab8/index.html
+++ b/lab8/index.html
@@ -18,6 +18,9 @@
 <h1>Завдання 1–3 до лабораторної роботи №8:</h1>
 
 <ul>
+    <ul>
     <li><a href="KychenkoLab08-1.html">Завдання 1</a></li>
-    <li><a href="Kychenko
+    <li><a href="KychenkoLab08-2.html">Завдання 2</a></li>
+    <li><a href="KychenkoLab08-3.html">Завдання 3</a></li>
+</ul>
 
